--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="main.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
-        <title>TexTopreview</title>
+        <title>TexEquationPreview</title>
     </head>
     <body>
         <header>TexEquationPreview</header>
