add creator information and change animation of some a elements

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         </header>
         <div class="description">
             <p>LaTeXの数式をinputエリアに入力するとプレビューがリアルタイムで表示されます</p>
+            <p>creator : <a href="https://cotora.github.io" id="creator">cotora</a></p>
         </div>
     </body>
 </html>
