--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" type="text/css" href="about.css">
-        <title>LaTeXEquationPreview</title>
+        <title>LaTeXFormulaPreview</title>
     </head>
     <body>
         <header>
-            <a href="index.html" id="header-title">LaTeXEquationPreview</a>
+            <a href="index.html" id="header-title">LaTeXFormulaPreview</a>
             <a href="about.html" id="about">about</a>
         </header>
         <div class="description">
