--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="main.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
-        <title>LaTeXEquationPreview</title>
+        <title>LaTeXFormulaPreview</title>
     </head>
     <body>
         <header>
-            <a href="index.html" id="header-title">LaTeXEquationPreview</a>
+            <a href="index.html" id="header-title">LaTeXFormulaPreview</a>
             <a href="about.html" id="about">about</a>
         </header>
         <div class="result">
